# radiochron-mcp

./: .gitignore  Cargo.toml  README.md  build.rs  package.json  server.json
.github/workflows/: ci.yml
npm/: bin.js  bin.test.js  prepare.js
scripts/: verify-package.js
src/: ble.rs  ble_scan.rs  chronicle.rs  main.rs  mcp.rs  mcp_server.rs  report.rs
src/mcp_server/: catalog.rs  protocol.rs  resources.rs  schema.rs  tests.rs  tools.rs  transport.rs
src/mcp_server/catalog/: chronicle.rs  incident.rs  wifi.rs
src/mcp_server/protocol/: validation.rs
src/mcp_server/tools/: incident.rs  wifi.rs
tests/: mcp_conformance.rs
