[package]
name = "radiochron-mcp"
description = "Model Context Protocol server exposing local Wi-Fi diagnostics over stdio. Pure Rust, no MCP SDK."
keywords = ["mcp", "wifi", "wlan", "diagnostics", "model-context-protocol"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"
version = "0.2.0"
edition = "2021"
rust-version = "1.78"
authors = ["Sergii Ziborov"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sergii-ziborov/radiochron-mcp"
build = "build.rs"

[[bin]]
name = "radiochron"
path = "src/main.rs"

[dependencies]
# Pin the engine revision so a released MCP binary always has a reproducible
# collector/analysis implementation independent of future core changes.
radiochron = { git = "https://github.com/sergii-ziborov/radiochron", rev = "f9208c8", version = "0.2.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[profile.release]
lto = "thin"
strip = true
