[package]
name = "radiochron-mcp"
description = "Pure-Rust MCP server for local Wi-Fi diagnostics and portable BLE history/risk analysis"
keywords = ["mcp", "wifi", "bluetooth", "diagnostics", "model-context-protocol"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"
version = "0.4.0"
edition = "2021"
rust-version = "1.78"
authors = ["Sergii Ziborov"]
license = "MIT"
repository = "https://github.com/sergii-ziborov/radiochron-mcp"
build = "build.rs"

[[bin]]
name = "radiochron"
path = "src/main.rs"

[dependencies]
# Pin the engine revision so a released MCP binary always has a reproducible
# collector/analysis implementation independent of future core changes.
radiochron = { git = "https://github.com/sergii-ziborov/radiochron", rev = "fbd91670c4f15ce6d0e791d78da15189afb9f7e9", version = "0.4.0", features = ["ble"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[profile.release]
lto = "thin"
strip = true
